--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 4px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -49,10 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 
-button:hover {
-  border-color: #646cff;
-}
-
+button:hover,
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -69,7 +66,7 @@ button:focus-visible {
   text-align: center;
   display: flex;
   flex-direction: column;
-
+  align-items: center;
 }
 
 @media (prefers-color-scheme: light) {
